alb-sgroup.tf
resource "aws_security_group" "alb-sg" {
  name        = "alb-lb"
  description = "appilaction loadbalancer"
  vpc_id      = "vpc-01968d6f75658664f"
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "alb-sg"
  }
}
